# langextractclaims

./: README.md  pyproject.toml
data/eval_gold/v1/: README.md  associations.jsonl  claims.jsonl  mitre_links.jsonl
data/mitre_reference_docs/: T1021.003_Microsoft_Process_Wide_Com_Keys.html  T1021.005_The_Remote_Framebuffer_Protocol.html  T1021.008_AWS_System_Manager.html  T1027.017_Talos_SVG_Smuggling_2022.html  T1055.015_Microsoft_List_View_Controls.html  T1098.006_Microsoft_Azure_Kubernetes_Service_Service_Accounts.html  T1677_GitHub_Security_Labs_GitHub_Actions_Security_Part_2_2021.html  url_therecord.media_dutch-telecom-giant-announces-data-breach.html  url_www.haaretz.com_0000019c-4e2f-dc30-a9de-cfff21560000.html
notebooks/: mitre_langextract_playground.ipynb
src/mitre_langextract_mini/: __init__.py  __main__.py  evaluate.py  schemas_v2.py  workflow.py
tests/: test_consumers_v2.py  test_eval_gold.py  test_evaluate.py  test_workflow.py
